reset button lamp js

--- a/Aula02/index.html
+++ b/Aula02/index.html
@@ -16,6 +16,7 @@
       <button id="ligar">Ligar</button>
       <button id="desligar">Desligar</button>
       <button id="alternar">Ligar</button>
+      <button id="reset">Reset</button>
     </div>
 
     <div>
