--- a/Exercicio3/index03.html
+++ b/Exercicio3/index03.html
@@ -5,19 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio 01</title>
+    <title>Exercicio 03</title>
+    <style>
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-right: 10px;
+        }
+
+        p {
+            margin-top: 20px;
+            font-size: 18px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Interagindo com o usuário</h1>
-    <button onclick="exib()">Clique para começar</button>
+
+    <h1>INTERAGINDO COM O USUÁRIO</h1>
+
+    <button onclick="alterarTexto('b1')">Botão 1</button>
+    <button onclick="alterarTexto('b2')">Botão 2</button>
+    <button onclick="alterarTexto('b3')">Botão 3</button>
+
+    <p id="texto">Clique em algum botão.</p>
 
     <script>
-        function exib() {
-        var nome = prompt('Digite seu nome: ')
-        alert('Olá, Prazer em te conhecer ' +nome) 
-    }
-    
+        function alterarTexto(botao) {
+            var texto = document.getElementById('texto');
+            switch (botao) {
+                case 'b1':
+                    texto.textContent = "Você clicou no Botão 1.";
+                    break;
+                case 'b2':
+                    texto.textContent = "Você clicou no Botão 2.";
+                    break;
+                case 'b3':
+                    texto.textContent = "Você clicou no Botão 3.";
+                    break;
+                default:
+                    texto.textContent = "Clique em um dos botões acima.";
+                    break;
+            }
+        }
     </script>
 
 </body>
