--- a/Exercicio6/index06.html
+++ b/Exercicio6/index06.html
@@ -5,19 +5,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio 01</title>
+    <title>Exercicio 06</title>
+    <style>
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        p {
+            margin-top: 20px;
+            font-size: 18px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Interagindo com o usuário</h1>
-    <button onclick="exib()">Clique para começar</button>
+
+    <h1>Calculadora de Troco</h1>
+
+    <button onclick="calctroco()">Calcular Troco</button>
+
+    <p id="resultado"></p>
 
     <script>
-        function exib() {
-        var nome = prompt('Digite seu nome: ')
-        alert('Olá, Prazer em te conhecer ' +nome) 
-    }
-    
+        function calctroco() {
+            var produto = prompt("Por favor, insira o nome do produto:");
+            if (produto === null || produto === "") {
+                alert("Por favor, insira um nome de produto válido.");
+                return;
+            }
+
+            var precoTexto = prompt("Por favor, insira o preço do produto:");
+            var preco = parseFloat(precoTexto);
+
+            if (isNaN(preco) || preco <= 0) {
+                alert("Por favor, insira um preço válido.");
+                return;
+            }
+
+            var valorPagoTexto = prompt("Por favor, insira o valor pago pelo cliente:");
+            var valorPago = parseFloat(valorPagoTexto);
+
+            if (isNaN(valorPago) || valorPago < preco) {
+                alert("O valor pago pelo cliente deve ser maior ou igual ao preço do produto.");
+                return;
+            }
+
+            var troco = valorPago - preco;
+
+            document.getElementById('resultado').textContent = "Produto: " + produto + "\nPreço: R$ " + preco.toFixed(2) + "\nValor Pago: R$ " + valorPago.toFixed(2) + "\nTroco: R$ " + troco.toFixed(2);
+        }
     </script>
 
 </body>
