--- a/ManipulandoCSS/index.html
+++ b/ManipulandoCSS/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS e JS</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<main>
-    <h1 class="padrao">Manipulando CSS</h1>
-    <span id="buttons">
-        <button id="SASUKE">SASUKE UCHIHA</button>
-        <button id="ITACHI">ITACHI</button>
-        <button id="OBITO">OBITO</button>
-        <button id="MADARA">MADARA</button>
-        <button id="INDRA">INDRA OTSUTSUKI</button>
-    </span>
-    <section id="texts">
-        <article>
-            <figure>
-                <img id="gif" src="" alt="">
-            </figure>
-        </article>
-        <article>
-            <h2 id="Personagem"> </h2>
-            <p class="" id="Info"> </p>
-        </article>
-    </section>
-</main>
+    <main>
+        <h1 class="padrao">Manipulando CSS</h1>
+        <div id="buttons" class="buttons">
+            <button id="SASUKE" class="character-button">SASUKE UCHIHA</button>
+            <button id="ITACHI" class="character-button">ITACHI</button>
+            <button id="OBITO" class="character-button">OBITO</button>
+            <button id="MADARA" class="character-button">MADARA</button>
+            <button id="INDRA" class="character-button">INDRA OTSUTSUKI</button>
+        </div>
+        <section id="texts">
+            <article>
+                <figure>
+                    <img id="gif" src="" alt="">
+                </figure>
+            </article>
+            <article>
+                <h2 id="Personagem"> </h2>
+                <p id="Info"> </p>
+            </article>
+        </section>
+    </main>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 
 </body>
+
 </html>
